adding database connection
